.next/dev/logs/next-development.log
[00:00:00.619] Server  LOG     ✓ Ready in 445ms
[00:00:07.652] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:00:07.728] Server  ERROR   ⨯ Detected default export in '[project]/src/app/api/trails/route.js'. Export a named export for each HTTP method instead.
[00:00:07.736] Server  ERROR   ⨯ No HTTP methods exported in '[project]/src/app/api/trails/route.js'. Export a named export for each HTTP method.
[00:00:07.892] Browser WARN    Google Maps JavaScript API has been loaded directly without loading=async. This can result in suboptimal performance. For best-practice loading patterns please see https://goo.gle/js-api-loading
[00:00:07.892] Browser ERROR   unhandledRejection: SyntaxError: Failed to execute 'json' on 'Response': Unexpected end of JSON input
[00:01:45.779] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:01:45.928] Browser WARN    Google Maps JavaScript API has been loaded directly without loading=async. This can result in suboptimal performance. For best-practice loading patterns please see https://goo.gle/js-api-loading
[00:01:45.928] Browser WARN    As of February 21st, 2024, google.maps.Marker is deprecated. Please use google.maps.marker.AdvancedMarkerElement instead. At this time, google.maps.Marker is not scheduled to be discontinued, but google.maps.marker.AdvancedMarkerElement is recommended over google.maps.Marker. While google.maps.Marker will continue to receive bug fixes for any major regressions, existing bugs in google.maps.Marker will not be addressed. At least 12 months notice will be given before support is discontinued. Please see https://developers.google.com/maps/deprecations for additional details and https://developers.google.com/maps/documentation/javascript/advanced-markers/migration for the migration guide.
[00:03:05.321] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:03:05.481] Browser WARN    Google Maps JavaScript API has been loaded directly without loading=async. This can result in suboptimal performance. For best-practice loading patterns please see https://goo.gle/js-api-loading
[00:05:51.103] Server  LOG     ✓ Compiled in 194ms
[00:05:51.813] Browser ERROR   ./src/app/trails/page.js:63:15
Parsing ecmascript source code failed
  61 |                     {trail.title}
  62 |                 </Typography>
> 63 |             </Box>
     |               ^^^
  64 |
  65 |             {/* Content */}
  66 |             <Box sx={{ p: 3 }}>

Expected corresponding JSX closing tag for <Card>

Import traces:
  Client Component Browser:
    ./src/app/trails/page.js [Client Component Browser]
    ./src/app/trails/page.js [Server Component]

  Client Component SSR:
    ./src/app/trails/page.js [Client Component SSR]
    ./src/app/trails/page.js [Server Component]
[00:05:53.719] Server  ERROR   ⨯ ./src/app/trails/page.js:63:15
Parsing ecmascript source code failed
  61 |                     {trail.title}
  62 |                 </Typography>
> 63 |             </Box>
     |               ^^^
  64 |
  65 |             {/* Content */}
  66 |             <Box sx={{ p: 3 }}>

Expected corresponding JSX closing tag for <Card>

Import traces:
  Client Component Browser:
    ./src/app/trails/page.js [Client Component Browser]
    ./src/app/trails/page.js [Server Component]

  Client Component SSR:
    ./src/app/trails/page.js [Client Component SSR]
    ./src/app/trails/page.js [Server Component]


[00:05:53.898] Browser ERROR   ./src/app/trails/page.js:63:15
Parsing ecmascript source code failed
  61 |                     {trail.title}
  62 |                 </Typography>
> 63 |             </Box>
     |               ^^^
  64 |
  65 |             {/* Content */}
  66 |             <Box sx={{ p: 3 }}>

Expected corresponding JSX closing tag for <Card>

Import traces:
  Client Component Browser:
    ./src/app/trails/page.js [Client Component Browser]
    ./src/app/trails/page.js [Server Component]

  Client Component SSR:
    ./src/app/trails/page.js [Client Component SSR]
    ./src/app/trails/page.js [Server Component]
[00:05:54.003] Browser ERROR   uncaughtError: Error: ./src/app/trails/page.js:63:15
Parsing ecmascript source code failed
  61 |                     {trail.title}
  62 |                 </Typography>
> 63 |             </Box>
     |               ^^^
  64 |
  65 |             {/* Content */}
  66 |             <Box sx={{ p: 3 }}>

Expected corresponding JSX closing tag for <Card>

Import traces:
  Client Component Browser:
    ./src/app/trails/page.js [Client Component Browser]
    ./src/app/trails/page.js [Server Component]

  Client Component SSR:
    ./src/app/trails/page.js [Client Component SSR]
    ./src/app/trails/page.js [Server Component]


[00:05:54.151] Browser ERROR   ./src/app/trails/page.js:63:15
Parsing ecmascript source code failed
  61 |                     {trail.title}
  62 |                 </Typography>
> 63 |             </Box>
     |               ^^^
  64 |
  65 |             {/* Content */}
  66 |             <Box sx={{ p: 3 }}>

Expected corresponding JSX closing tag for <Card>

Import traces:
  Client Component Browser:
    ./src/app/trails/page.js [Client Component Browser]
    ./src/app/trails/page.js [Server Component]

  Client Component SSR:
    ./src/app/trails/page.js [Client Component SSR]
    ./src/app/trails/page.js [Server Component]
[00:05:54.151] Browser ERROR   ./src/app/trails/page.js:63:15
Parsing ecmascript source code failed
  61 |                     {trail.title}
  62 |                 </Typography>
> 63 |             </Box>
     |               ^^^
  64 |
  65 |             {/* Content */}
  66 |             <Box sx={{ p: 3 }}>

Expected corresponding JSX closing tag for <Card>

Import traces:
  Client Component Browser:
    ./src/app/trails/page.js [Client Component Browser]
    ./src/app/trails/page.js [Server Component]

  Client Component SSR:
    ./src/app/trails/page.js [Client Component SSR]
    ./src/app/trails/page.js [Server Component]
[00:06:02.196] Server  LOG     ✓ Compiled in 32ms
[00:06:02.562] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:06:02.700] Browser WARN    Google Maps JavaScript API has been loaded directly without loading=async. This can result in suboptimal performance. For best-practice loading patterns please see https://goo.gle/js-api-loading
[00:07:15.764] Server  LOG     ✓ Compiled in 82ms
[00:07:17.271] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:07:17.382] Browser WARN    Google Maps JavaScript API has been loaded directly without loading=async. This can result in suboptimal performance. For best-practice loading patterns please see https://goo.gle/js-api-loading
[00:07:25.522] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:07:25.639] Browser WARN    Google Maps JavaScript API has been loaded directly without loading=async. This can result in suboptimal performance. For best-practice loading patterns please see https://goo.gle/js-api-loading
